# Kodama

./: .gitignore  README.md  engine_manifest.json  main.py  pyproject.toml  run.bat  yomi2voca.py
engine_manifest_assets/: terms_of_service.md
kodama/: main.py  yomi2voca.py
