[tool.poetry]
name = "kodama"
version = "0.1.0"
description = ""
authors = ["Kina"]
readme = "README.md"
license = "Apache-2.0"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.12"
pyworld = "^0.3.4"
voicevox-client = "^0.2.3"
numpy = "^1.26.3"
llvmlite = "0.42.0rc1"
numba = "0.59.0rc1"
librosa = "^0.10.1"
mypy = "^1.8.0"
setuptools = "^69.0.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kodama = "kodama.main:command"
